--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
+    "jimp": "^0.22.8",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tesseract.js": "^4.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
