--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/beanjermin/DutchPay#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
@@ -29,6 +30,8 @@
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "tesseract.js": "^4.1.0"
   },
   "devDependencies": {
